# gaiaflow-cookiecutter

./: .gitignore  CHANGES.md  README.md  cookiecutter.json  env.yml  environment.yml  mkdocs.yml  mkdocsold.yml  pyproject.toml
.github/workflows/: gh_deploy.yml
docs/: dev.md  gaiaflow_manager.md  getting_started.md  index.md  local.md  minikube_manager.md  prod.md  services.md  tutorial.md
docs/assets/: mlfow_introduction.ipynb
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{ cookiecutter.folder_name }}/: .env  .gitignore  CHANGES.md  Dockerfile  MLOPS.md  MLOps.md  PROD.md  README.md  docker-compose.yml  docker_config.py  environment.yml  minikube_manager.py  mlops-run.sh  mlops_manager.py  prod_local_setup.sh  pyproject.toml  runner.py
{{ cookiecutter.folder_name }}/.github/workflows/: deploy_dags_to_prod.yml  publish.yml  unittest.yml
{{ cookiecutter.folder_name }}/dags/: README.md  change_me_config.yml  change_me_dag.py  change_me_task_factory.py  change_me_task_factory_dag.py  example_config.yml  example_dag.py  example_task_factory.py  example_task_factory_dag.py  task_factory.py  test_task_factory.py
{{ cookiecutter.folder_name }}/data/: add_your_data_here
{{ cookiecutter.folder_name }}/docker/: kube_config_inline
{{ cookiecutter.folder_name }}/docker/airflow/: Dockerfile
{{ cookiecutter.folder_name }}/docker/docker-compose/: docker-compose.yml
{{ cookiecutter.folder_name }}/mlops/utils/: utils.py
{{ cookiecutter.folder_name }}/notebooks/: README.md
{{ cookiecutter.folder_name }}/notebooks/examples/: mlflow_direct_inference.ipynb  mlflow_local_deploy_inference.ipynb  mlfow_introduction.ipynb
{{ cookiecutter.folder_name }}/tests/: conftest.py  test_minikube_manager.py  test_mlops_manager.py
{{ cookiecutter.folder_name }}/tests/dags/: test_dag_integrity.py
{{ cookiecutter.folder_name }}/tests/model/: test_model.py
{{ cookiecutter.folder_name }}/tests/model_pipeline/: test_model_pipeline.py
{{ cookiecutter.folder_name }}/tests/preprocess/: test_preprocess.py
{{ cookiecutter.folder_name }}/tests/train/: test_train.py
{{ cookiecutter.folder_name }}/tools/: gen_docker_image_name.py  minikube_manager.py  mlops_manager.py  utils.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/: README.md  __init__.py  runner.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/dataloader/: change_me_data.py  example_data.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/model_pipeline/: example_model_pipeline.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/models/: example_model.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/postprocess/: change_me_postprocess.py  example_postprocess.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/predict/: change_me_predict.py  example_predict.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/preprocess/: change_me_preprocess.py  example_preprocess.py  example_preprocess_without_minio.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.package_name }}/train/: change_me_train.py  example_train.py
{{ cookiecutter.package_name }}/: .env  README.md  airflow_test.cfg  environment.yml  pixi_pyproject.toml
(+10 files in other folders)
