[project]
name = "GaiaFlow"
authors = [
    {name = "Yogesh Kumar Baljeet Singh", email = "yogesh.baljeetsingh@brockmann-consult.de"},
]
description = """\
   GaiaFlow is a MLOps tool that streamlines the Earth Observation ML projects.
   NOTE: This is only to make sure that while testing this repository, pytest does not include the tests from the
   to-be-generated project from the `cookiecutter.folder_name` package.
    """
keywords = [
    "Airflow",
    "MLFlow",
    "MLOps",
    "MinIO",
    "Python",
    "Earth Observation",
    "Remote Sensing",
    "Machine Learning",
    "Deep Learning"
]
version = "0.1.1"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE", content-type = "text/plain" }
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
norecursedirs = ["{{ cookiecutter.folder_name }}", "//*"]